[gd_scene load_steps=22 format=3 uid="uid://dx3enl8snqtmc"]

[ext_resource type="Script" uid="uid://cg1omn2e4p8fh" path="res://scripts/enemy.gd" id="1_4gyqm"]
[ext_resource type="Texture2D" uid="uid://b2wjhwp4lvsdl" path="res://art/characters/tikus/rat_upward_2.png" id="2_otmr2"]
[ext_resource type="Texture2D" uid="uid://b8e7l1iah4iy8" path="res://art/characters/tikus/rat_attack_behind.png" id="2_s1ycm"]
[ext_resource type="AudioStream" uid="uid://cv428gcpraxtc" path="res://Sound Effect/enemy_death.mp3" id="3_4ra3w"]
[ext_resource type="Texture2D" uid="uid://c6gm6x7k6yuew" path="res://art/characters/tikus/rat_attack_front.png" id="3_shcg2"]
[ext_resource type="Texture2D" uid="uid://c1hhn0g402rwr" path="res://art/characters/tikus/rat_death_1.png" id="3_wtq4b"]
[ext_resource type="Texture2D" uid="uid://byi4awqseuula" path="res://art/characters/tikus/rat_attack_left.png" id="4_ile5s"]
[ext_resource type="Texture2D" uid="uid://d0ceaveqglwan" path="res://art/characters/tikus/rat_death_2.png" id="4_j0cyh"]
[ext_resource type="Texture2D" uid="uid://dhiam41oowyxd" path="res://art/characters/tikus/rat_attack_right.png" id="5_1x4g4"]
[ext_resource type="Texture2D" uid="uid://b7xm7lkelgy1j" path="res://art/characters/tikus/rat_downward_1.png" id="5_g0wcc"]
[ext_resource type="Texture2D" uid="uid://dootupfi2mmxf" path="res://art/characters/tikus/walk_right_2.png" id="6_s1ycm"]
[ext_resource type="Texture2D" uid="uid://b8kkmtf6oab42" path="res://art/characters/tikus/rat_upward_1.png" id="7_shcg2"]
[ext_resource type="Texture2D" uid="uid://c3mwyjfanp2op" path="res://art/characters/tikus/rat_upward_3.png" id="8_ile5s"]
[ext_resource type="Texture2D" uid="uid://x2e5bpqqs22n" path="res://art/characters/tikus/rat_downward_2.png" id="9_1x4g4"]
[ext_resource type="Texture2D" uid="uid://b4qk5lt11587k" path="res://art/characters/tikus/rat_downward_3.png" id="10_2pwtc"]
[ext_resource type="Texture2D" uid="uid://c5k6xs7dx1goe" path="res://art/characters/tikus/walk_right_1.png" id="11_rogs8"]
[ext_resource type="Texture2D" uid="uid://d1od67v7tukmi" path="res://art/characters/tikus/walk_right_3.png" id="12_wrm80"]

[sub_resource type="SpriteFrames" id="SpriteFrames_difxq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_s1ycm")
}],
"loop": true,
"name": &"attack_behind",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_shcg2")
}],
"loop": true,
"name": &"attack_front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_ile5s")
}],
"loop": true,
"name": &"attack_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_1x4g4")
}],
"loop": true,
"name": &"attack_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_otmr2")
}],
"loop": true,
"name": &"back_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_wtq4b")
}, {
"duration": 1.0,
"texture": ExtResource("4_j0cyh")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_g0wcc")
}],
"loop": true,
"name": &"idle_front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_s1ycm")
}],
"loop": true,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_shcg2")
}, {
"duration": 1.0,
"texture": ExtResource("2_otmr2")
}, {
"duration": 1.0,
"texture": ExtResource("8_ile5s")
}],
"loop": true,
"name": &"walk_back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_g0wcc")
}, {
"duration": 1.0,
"texture": ExtResource("9_1x4g4")
}, {
"duration": 1.0,
"texture": ExtResource("10_2pwtc")
}],
"loop": true,
"name": &"walk_front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_rogs8")
}, {
"duration": 1.0,
"texture": ExtResource("6_s1ycm")
}, {
"duration": 1.0,
"texture": ExtResource("12_wrm80")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_5tv8x"]
radius = 849.311

[sub_resource type="CircleShape2D" id="CircleShape2D_jnl6c"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_4gyqm"]
radius = 9.0

[node name="enemy" type="CharacterBody2D"]
script = ExtResource("1_4gyqm")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.04, 0.04)
sprite_frames = SubResource("SpriteFrames_difxq")
animation = &"walk_front"
offset = Vector2(0, -6)

[node name="detection_area" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
shape = SubResource("CircleShape2D_5tv8x")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_jnl6c")

[node name="enemny_hitbox" type="Area2D" parent="."]
position = Vector2(0, -2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemny_hitbox"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_4gyqm")

[node name="take_damage_cooldown" type="Timer" parent="."]

[node name="sfx_death" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_4ra3w")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_AnimatedSprite2D_animation_finished"]
[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="take_damage_cooldown" to="." method="_on_take_damage_cooldown_timeout"]
